[package]
name = "confit"
version = "1.1.2"
authors = ["Judson <nyarly@gmail.com>"]
edition = "2018"
license-file = "LICENSE.md"
description = "Making sure your work is properly preserved"
homepage = "https://indiecc.com/~nyarly/confit"
repository = "https://github.com/nyarly/confit"
keywords = ["cli", "vcs", "git", "ci", "tools" ]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
nom = '5'
chrono = '0.4'
clap = { version = '~2.33.3', features = ['wrap_help'] }
serde = { version = "^1.0.0", features = ['derive'] }
serde_json = "^1.0.0"
anyhow = "^1.0.0"
tera = { version = "^1.11.0", default-features = false }
lazy_static = "^1.4.0"
include_dir = "^0.6.1"
